--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
-  "name": "EmreDetails - CRM & Management",
+  "name": "EmreDetails - Fahrzeugveredelung Marl",
   "short_name": "EmreDetails",
-  "description": "Exklusive Fahrzeugveredelung in Marl. Managed by DetailHQ.",
+  "description": "Exklusive Fahrzeugaufbereitung und Lackschutz in Marl. Qualität durch DetailHQ-Standards.",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
-    { "src": "app_icon.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "app_icon.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "img/app_icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "img/app_icon.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
