--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
-    { "src": "img/app_icon.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "img/app_icon.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "img/logo.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "img/icon.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
